--- a/app/src/main/res/layout/bookmarklist_item.xml
+++ b/app/src/main/res/layout/bookmarklist_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.vacancyclassroom.item.CheckableLinearLayout2
+<com.jun.vacancyclassroom.item.CheckableLinearLayout2
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="horizontal"
@@ -30,4 +30,4 @@
         android:clickable="false"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
-</com.example.vacancyclassroom.item.CheckableLinearLayout2>
+</com.jun.vacancyclassroom.item.CheckableLinearLayout2>
