--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentB">
+    tools:context="com.jun.vacancyclassroom.FragmentB">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/sliding_tabs"
