--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -45,6 +45,7 @@
         android:id="@+id/searchlist_a"
         android:choiceMode="multipleChoice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:layout_marginBottom="55dp"></ListView>
 
 </LinearLayout>
