--- a/app/src/main/res/layout/bookmarklist_item.xml
+++ b/app/src/main/res/layout/bookmarklist_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.jun.vacancyclassroom.item.CheckableLinearLayout2
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="horizontal"
@@ -22,12 +22,5 @@
         android:background="@color/red"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
-    <CheckBox
-        android:id="@+id/checkBox2"
-        android:layout_weight="1"
-        android:layout_marginLeft="10dp"
-        android:focusable="false"
-        android:clickable="false"
-        android:layout_width="0dp"
-        android:layout_height="match_parent" />
-</com.jun.vacancyclassroom.item.CheckableLinearLayout2>
+
+</LinearLayout>
