--- a/OlicMain/app/src/main/res/values/colors.xml
+++ b/OlicMain/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="skyblue">#4374D9</color>
     <color name="dark_skyblue">#396ACF</color>
     <color name="statusBar_color">#FF000000</color>
+    <color name="transparent">#00000000</color>
 </resources>
