자동 업데이트

--- a/OlicMain/app/src/main/res/values/styles.xml
+++ b/OlicMain/app/src/main/res/values/styles.xml
@@ -19,7 +19,20 @@
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
-
+    <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:gravity">center</item>
+        <!-- 상하단바 제거-->
+        <item name="android:windowActionBar">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <!--하단바투명 - 현재안되고있음-->
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+    </style>
     <style name="TabTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">#f5a623</item>                                <!-- 배경 -->
 
