--- a/OlicMain/app/src/main/res/layout/activity_main.xml
+++ b/OlicMain/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        app:labelVisibilityMode="labeled"
         android:background="?android:attr/windowBackground"
         app:layout_behavior="tech.thdev.app.view.BottomNavigationBehavior"
         app:layout_constraintBottom_toBottomOf="parent"
