--- a/OlicMain/app/src/main/res/values/styles.xml
+++ b/OlicMain/app/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
         <item name="colorPrimary">@color/skyblue</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:statusBarColor">@color/statusBar_color</item>
 
     </style>
     <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
