ver 1.3.2 androidX 로 migrate

--- a/OlicMain/app/src/main/res/layout/activity_loading.xml
+++ b/OlicMain/app/src/main/res/layout/activity_loading.xml
@@ -1,6 +1,8 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:clickable="false"
@@ -8,4 +10,4 @@ android:focusable="false"
 tools:context=".LoadingActivity"
 android:theme="@style/AppCompatAlertDialogStyle">
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
