--- a/OlicMain/app/src/main/res/layout/activity_main.xml
+++ b/OlicMain/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.jun.vacancyclassroom.MainActivity">
+    tools:context="com.jun.vacancyclassroom.activity.MainActivity">
 
 
     <androidx.viewpager2.widget.ViewPager2
