--- a/OlicMain/app/src/main/res/layout/activity_time_table.xml
+++ b/OlicMain/app/src/main/res/layout/activity_time_table.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.jun.vacancyclassroom.TimeTableActivity">
+    tools:context="com.jun.vacancyclassroom.activity.TimeTableActivity">
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
