--- a/OlicMain/app/src/main/res/layout/fragment_bookmarklist.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_bookmarklist.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jun.vacancyclassroom.FragmentB">
+    tools:context="com.jun.vacancyclassroom.fragment.BookmarkListFragment">
 
 
     <com.google.android.gms.ads.AdView
