--- a/OlicMain/app/src/main/res/layout/fragment_buildinglist.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_buildinglist.xml
@@ -1,38 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jun.vacancyclassroom.FragmentA">
-
+    android:orientation="vertical"
+    tools:context="com.jun.vacancyclassroom.fragment.BuildingListFragment">
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView1"
+        android:id="@+id/adView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
         android:layout_gravity="center_horizontal"
-        ads:adUnitId="ca-app-pub-7245602797811817/2163923634">
+        ads:adUnitId="ca-app-pub-7245602797811817/1210306711">
     </com.google.android.gms.ads.AdView>
 
     <EditText
-        android:id="@+id/search_classroom"
+        android:id="@+id/search_building"
         android:textSize="20dp"
         android:layout_marginHorizontal="20dp"
-        android:hint="강의실 검색"
+        android:hint="건물 검색"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <ListView
-        android:id="@+id/searchlist_a"
+        android:id="@+id/searchlist_c"
         android:choiceMode="multipleChoice"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="55dp"></ListView>
-
 </LinearLayout>
