--- a/OlicMain/app/src/main/res/layout/fragment_lecturesearch.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_lecturesearch.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.jun.vacancyclassroom.FragmentD">
+    tools:context="com.jun.vacancyclassroom.fragment.LectureSearchFragment">
 
     <EditText
         android:id="@+id/add_lecture_edit"
