constraint layout 적용중 recyclerview 교체 필요

--- a/OlicMain/app/src/main/res/layout/activity_loading.xml
+++ b/OlicMain/app/src/main/res/layout/activity_loading.xml
@@ -7,7 +7,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:clickable="false"
 android:focusable="false"
-tools:context=".LoadingActivity"
+tools:context="com.jun.vacancyclassroom.activity.LoadingActivity"
 android:theme="@style/AppCompatAlertDialogStyle">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
