--- a/OlicMain/app/src/main/res/layout/activity_building.xml
+++ b/OlicMain/app/src/main/res/layout/activity_building.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,8 +10,11 @@
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView5"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintTop_toTopOf="parent"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
@@ -25,6 +28,7 @@
         android:textColor="@color/black"
         android:textAlignment="center"
         android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/adView5"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
@@ -35,5 +39,7 @@
         android:layout_width="match_parent"
         android:layout_weight="13"
         android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/buildingName_buildingActivity"
+        app:layout_constraintBottom_toBottomOf="parent"
         ></ListView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
