--- a/OlicMain/app/src/main/res/layout/activity_main.xml
+++ b/OlicMain/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,14 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/navigation"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
