--- a/OlicMain/app/src/main/res/layout/activity_splash.xml
+++ b/OlicMain/app/src/main/res/layout/activity_splash.xml
@@ -1,37 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/skyblue"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.jun.vacancyclassroom.activity.SplashActivity">
 
-    <TextView
-        android:id="@+id/olic_splash"
+    <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        android:layout_marginBottom="50dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Olic"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="70dp"
-        android:textStyle="bold"
-        android:layout_marginTop="200dp"
-        />
-    <TextView
-        android:id="@+id/app_ment_splash"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:text="경북대학교 빈강의실찾기"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        android:textAlignment="center"/>
-    <ImageView
-        android:id="@+id/roomimg_splash"
-        android:src="@drawable/baseline_meeting_room_white_48"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/olic_splash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="Olic"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:id="@+id/app_ment_splash"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:text="경북대학교 빈강의실찾기"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/olic_splash"
+            android:layout_marginBottom="30dp"
+            android:textAlignment="center"/>
+        <ImageView
+            android:id="@+id/roomimg_splash"
+            android:src="@drawable/baseline_meeting_room_white_48"
+            app:layout_constraintTop_toBottomOf="@id/app_ment_splash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
