--- a/OlicMain/app/src/main/res/layout/fragment_bookmarklist.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_bookmarklist.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -13,6 +13,9 @@
         android:id="@+id/adView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintTop_toTopOf="parent"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
@@ -26,12 +29,15 @@
         android:layout_gravity="right"
         android:background="@drawable/ripple_transparent"
         android:drawableRight="@drawable/ic_arrow_drop_up_black_36dp"
+        app:layout_constraintTop_toBottomOf="@id/adView2"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 
     <LinearLayout
         android:id="@+id/linearLayout_time"
+        app:layout_constraintTop_toBottomOf="@id/visible_btn"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -72,7 +78,9 @@
         android:id="@+id/searchlist_b"
         android:choiceMode="multipleChoice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"></ListView>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout_time"
+        app:layout_constraintBottom_toBottomOf="parent"
+        ></ListView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
