--- a/OlicMain/app/src/main/res/layout/fragment_buildinglist.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_buildinglist.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.jun.vacancyclassroom.fragment.BuildingListFragment">
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView4"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintTop_toTopOf="parent"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
@@ -20,6 +25,7 @@
 
     <EditText
         android:id="@+id/search_building"
+        app:layout_constraintTop_toBottomOf="@id/adView4"
         android:textSize="20dp"
         android:layout_marginHorizontal="20dp"
         android:hint="건물 검색"
@@ -30,6 +36,7 @@
         android:id="@+id/searchlist_c"
         android:choiceMode="multipleChoice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"></ListView>
-</LinearLayout>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/search_building"
+        app:layout_constraintBottom_toBottomOf="parent"></ListView>
+</androidx.constraintlayout.widget.ConstraintLayout>
