--- a/OlicMain/app/src/main/res/layout/fragment_lectureroomlist.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_lectureroomlist.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -11,8 +11,12 @@
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintTop_toTopOf="parent"
+        ads:layout_constraintBottom_toTopOf="@id/search_classroom"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
@@ -25,6 +29,8 @@
         android:textSize="20dp"
         android:layout_marginHorizontal="20dp"
         android:hint="강의실 검색"
+        app:layout_constraintTop_toBottomOf="@id/adView1"
+        app:layout_constraintBottom_toTopOf="@id/searchlist_a"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -32,7 +38,8 @@
         android:id="@+id/searchlist_a"
         android:choiceMode="multipleChoice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"></ListView>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/search_classroom"
+        app:layout_constraintBottom_toBottomOf="parent"></ListView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
