--- a/OlicMain/app/src/main/res/layout/fragment_lecturesearch.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_lecturesearch.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.jun.vacancyclassroom.fragment.LectureSearchFragment">
 
@@ -11,6 +12,7 @@
         android:textSize="15dp"
         android:maxLength="10"
         android:hint="교과목코드 입력 (10자리 대소문자 구분)"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
@@ -21,6 +23,7 @@
         android:id="@+id/add_lecture_btn"
         android:text="강의추가하기"
         android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/add_lecture_edit"
         android:background="@drawable/ripple_lime_green"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
@@ -28,12 +31,13 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:id="@+id/linearLayout_info"
+        app:layout_constraintTop_toBottomOf="@id/add_lecture_btn"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp">
 
         <TextView
-
             android:text="교과목코드"
             android:layout_weight="3"
             android:layout_width="0dp"
@@ -86,8 +90,9 @@
     <ListView
         android:id="@+id/lecturelist_d"
         android:choiceMode="multipleChoice"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout_info"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"></ListView>
+        android:layout_height="0dp"></ListView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
