--- a/OlicMain/app/src/main/res/layout/fragment_lectureroomlist.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_lectureroomlist.xml
@@ -1,45 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.jun.vacancyclassroom.fragment.LectureRoomListFragment">
 
+<layout>
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ads:layout_constraintStart_toStartOf="parent"
-        ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintTop_toTopOf="parent"
-        ads:layout_constraintBottom_toTopOf="@id/search_classroom"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        android:layout_gravity="center_horizontal"
-        ads:adUnitId="ca-app-pub-7245602797811817/2163923634">
-    </com.google.android.gms.ads.AdView>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.jun.vacancyclassroom.viewmodel.MainViewModel" />
 
-    <EditText
-        android:id="@+id/search_classroom"
-        android:textSize="20dp"
-        android:layout_marginHorizontal="20dp"
-        android:hint="강의실 검색"
-        app:layout_constraintTop_toBottomOf="@id/adView1"
-        app:layout_constraintBottom_toTopOf="@id/searchlist_a"
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        tools:context="com.jun.vacancyclassroom.fragment.LectureRoomListFragment">
 
-    <ListView
-        android:id="@+id/searchlist_a"
-        android:choiceMode="multipleChoice"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/search_classroom"
-        app:layout_constraintBottom_toBottomOf="parent"></ListView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            ads:layout_constraintStart_toStartOf="parent"
+            ads:layout_constraintEnd_toEndOf="parent"
+            ads:layout_constraintTop_toTopOf="parent"
+            ads:layout_constraintBottom_toTopOf="@id/search_classroom"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            android:layout_gravity="center_horizontal"
+            ads:adUnitId="ca-app-pub-7245602797811817/2163923634">
+        </com.google.android.gms.ads.AdView>
+
+        <EditText
+            android:id="@+id/search_classroom"
+            android:textSize="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:hint="강의실 검색"
+            app:layout_constraintTop_toBottomOf="@id/adView1"
+            app:layout_constraintBottom_toTopOf="@id/lecturelist_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/lecturelist_recyclerview"
+            app:layout_constrainedHeight="true"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/search_classroom"
+            app:layout_constraintBottom_toBottomOf="parent"></androidx.recyclerview.widget.RecyclerView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
