--- a/OlicMain/app/src/main/res/layout/activity_main.xml
+++ b/OlicMain/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/bottomnavigation_height"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         app:labelVisibilityMode="labeled"
