--- a/OlicMain/app/src/main/res/layout/buildinglist_item.xml
+++ b/OlicMain/app/src/main/res/layout/buildinglist_item.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:descendantFocusability="blocksDescendants"
-    android:layout_height="50dp">
+<layout>
 
-    <TextView
-        android:id="@+id/building_name"
-        android:layout_weight="4"
-        android:layout_width="0dp"
-        android:layout_marginLeft="20dp"
-        android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_height="match_parent" />
+    <data>
+        <variable
+            name="building"
+            type="com.jun.vacancyclassroom.item.Building" />
+    </data>
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:descendantFocusability="blocksDescendants"
+        android:layout_height="50dp">
+
+        <TextView
+            android:id="@+id/building_name"
+            android:text="@{building.buildingName}"
+            android:layout_weight="4"
+            android:layout_width="0dp"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:layout_height="match_parent" />
 
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
