--- a/OlicMain/app/src/main/res/layout/fragment_lectureroomlist.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_lectureroomlist.xml
@@ -50,7 +50,7 @@
             app:layout_constrainedHeight="true"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/search_classroom"
             app:layout_constraintBottom_toBottomOf="parent"></androidx.recyclerview.widget.RecyclerView>
 
