--- a/OlicMain/app/src/main/res/layout/activity_main.xml
+++ b/OlicMain/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,10 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/navigation"
+        android:layout_marginBottom="@dimen/bottomnavigation_height"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
