--- a/OlicMain/app/src/main/res/layout/bookmarklist_item.xml
+++ b/OlicMain/app/src/main/res/layout/bookmarklist_item.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="item"
-            type="com.jun.vacancyclassroom.item.BookMarkedRoom" />
+            type="com.jun.vacancyclassroom.model.BookMarkedRoom" />
     </data>
 
     <LinearLayout
