--- a/OlicMain/app/src/main/res/layout/buildinglist_item.xml
+++ b/OlicMain/app/src/main/res/layout/buildinglist_item.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="building"
-            type="com.jun.vacancyclassroom.item.Building" />
+            type="com.jun.vacancyclassroom.model.Building" />
     </data>
 
     <LinearLayout
