--- a/OlicMain/app/src/main/res/layout/fragment_lecturesearch.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_lecturesearch.xml
@@ -7,8 +7,8 @@
     android:orientation="vertical"
     tools:context="com.jun.vacancyclassroom.fragment.LectureSearchFragment">
 
-    <EditText
-        android:id="@+id/add_lecture_edit"
+    <AutoCompleteTextView
+        android:id="@+id/add_lecture_autocomplete"
         android:textSize="15dp"
         android:maxLength="10"
         android:hint="교과목코드 입력 (10자리 대소문자 구분)"
@@ -17,13 +17,13 @@
         android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </EditText>
+    </AutoCompleteTextView>
 
     <Button
         android:id="@+id/add_lecture_btn"
         android:text="강의추가하기"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/add_lecture_edit"
+        app:layout_constraintTop_toBottomOf="@id/add_lecture_autocomplete"
         android:background="@drawable/ripple_lime_green"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
@@ -87,12 +87,13 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/lecturelist_d"
-        android:choiceMode="multipleChoice"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout_info"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lecturesearch_recyclerview"
+        app:layout_constrainedHeight="true"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"></ListView>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout_info"
+        app:layout_constraintBottom_toBottomOf="parent"></androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
