--- a/OlicMain/app/src/main/res/values/colors.xml
+++ b/OlicMain/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="dark_read">#EB0000</color>
     <color name="yellow">#FFFFFF00</color>
     <color name="dark_yellow">#FFE400</color>
+    <color name="blue">#0063FF</color>
     <color name="skyblue">#4374D9</color>
     <color name="dark_skyblue">#396ACF</color>
     <color name="statusBar_color">#FF000000</color>
