ver 1.4.2 release 버그 수정 및 데이터베이스 스키마 수정

--- a/OlicMain/app/src/main/res/layout/bookmarklist_item.xml
+++ b/OlicMain/app/src/main/res/layout/bookmarklist_item.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="item"
-            type="com.jun.vacancyclassroom.model.BookMarkedRoom" />
+            type="com.jun.vacancyclassroom.model.LectureRoom" />
     </data>
 
     <LinearLayout
