ver 1.4.3 release 버그 수정 에러 다이얼로그 추가 ripple effect

--- a/OlicMain/app/src/main/res/layout/lectureroomlist_item.xml
+++ b/OlicMain/app/src/main/res/layout/lectureroomlist_item.xml
@@ -6,8 +6,9 @@
             type="com.jun.vacancyclassroom.model.LectureRoom" />
     </data>
 
-    <com.jun.vacancyclassroom.model.CheckableLinearLayout
+    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="?attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:descendantFocusability="blocksDescendants"
@@ -33,5 +34,5 @@
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
-    </com.jun.vacancyclassroom.model.CheckableLinearLayout>
+    </LinearLayout>
 </layout>
