--- a/OlicMain/app/src/main/res/layout/lecturesearch_item.xml
+++ b/OlicMain/app/src/main/res/layout/lecturesearch_item.xml
@@ -8,6 +8,7 @@
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="?attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:descendantFocusability="blocksDescendants"
