--- a/OlicMain/app/src/main/res/layout/activity_building.xml
+++ b/OlicMain/app/src/main/res/layout/activity_building.xml
@@ -7,20 +7,7 @@
     android:orientation="vertical"
     tools:context="com.jun.vacancyclassroom.activity.BuildingActivity">
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ads:layout_constraintStart_toStartOf="parent"
-        ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintTop_toTopOf="parent"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        android:layout_gravity="center_horizontal"
-        ads:adUnitId="ca-app-pub-7245602797811817/4320875151">
-    </com.google.android.gms.ads.AdView>
+
     <TextView
         android:id="@+id/buildingName_buildingActivity"
         android:text="빌딩 이름"
@@ -29,7 +16,7 @@
         android:textAlignment="center"
         android:gravity="center"
         android:layout_marginVertical="5dp"
-        app:layout_constraintTop_toBottomOf="@id/adView5"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
