--- a/OlicMain/app/src/main/res/layout/activity_time_table.xml
+++ b/OlicMain/app/src/main/res/layout/activity_time_table.xml
@@ -8,24 +8,11 @@
     android:orientation="vertical"
     tools:context="com.jun.vacancyclassroom.activity.TimeTableActivity">
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ads:layout_constraintStart_toStartOf="parent"
-        ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintTop_toTopOf="parent"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        android:layout_gravity="center_horizontal"
-        ads:adUnitId="ca-app-pub-7245602797811817/3334322462">
-    </com.google.android.gms.ads.AdView>
+
 
     <LinearLayout
         android:id="@+id/linearLayout_lectureroom_name"
-        app:layout_constraintTop_toBottomOf="@id/adView3"
+        app:layout_constraintTop_toTopOf="parent"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
