--- a/OlicMain/app/src/main/res/layout/fragment_buildinglist.xml
+++ b/OlicMain/app/src/main/res/layout/fragment_buildinglist.xml
@@ -8,24 +8,11 @@
     android:orientation="vertical"
     tools:context="com.jun.vacancyclassroom.fragment.BuildingListFragment">
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ads:layout_constraintStart_toStartOf="parent"
-        ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintTop_toTopOf="parent"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        android:layout_gravity="center_horizontal"
-        ads:adUnitId="ca-app-pub-7245602797811817/1210306711">
-    </com.google.android.gms.ads.AdView>
+
 
     <EditText
         android:id="@+id/search_building"
-        app:layout_constraintTop_toBottomOf="@id/adView4"
+        app:layout_constraintTop_toTopOf="parent"
         android:textSize="20dp"
         android:layout_marginHorizontal="20dp"
         android:hint="건물 검색"
